--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcmaScript</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="/Array Introduction .js"></script>
+    
+<script src="Practice .js"></script>
 </body>
 </html>
